--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 .idea
 # User-specific stuff:
-.idea/workspace.xml
 .idea/tasks.xml
+
 
 # Sensitive or high-churn files:
 .idea/dataSources/
@@ -54,3 +54,4 @@ fabric.properties
 # *.ipr
 
 # End of https://www.gitignore.io/api/webstorm
+/.gitignore
