--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,5 +17,16 @@
   "bugs": {
     "url": "https://github.com/gerdfather/project_boilerplate/issues"
   },
-  "homepage": "https://github.com/gerdfather/project_boilerplate#readme"
+  "homepage": "https://github.com/gerdfather/project_boilerplate#readme",
+  "devDependencies": {
+    "babel-core": "^6.22.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.22.0",
+    "webpack": "^1.14.0"
+  },
+  "dependencies": {
+    "jquery": "^3.1.1",
+    "vue": "^2.1.10",
+    "vuex": "^2.1.1"
+  }
 }
